2009-06-08  Tomeu Vizoso  <tomeu@sugarlabs.org>

	Add a switch to disable autofullscreen'ing maximized windows without decorations
	
2009-03-12  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.27.1.

2009-03-12  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.27.0 release.

2009-03-11  Thomas Thurman  <tthurman@gnome.org>

	* po/POTFILES.in: add bell.c.

2009-03-11  Thomas Andersen  <phomes@gmail.com>

	Remove deprecated GTK symbols.  Refs #572332.

	* src/include/util.h:
	* src/tools/metacity-window-demo.c:
	* src/ui/fixedtip.c:
	* src/ui/frames.c:
	* src/ui/frames.h:
	* src/ui/menu.c:
	* src/ui/metaaccellabel.c:
	* src/ui/metaaccellabel.h:
	* src/ui/preview-widget.c:
	* src/ui/preview-widget.h:
	* src/ui/tabpopup.c:
	* src/ui/theme-viewer.c:
	* src/ui/themewidget.c:
	* src/ui/themewidget.h:
	* test/tokentest/tokentest.c:

2009-03-11  Matt Kraai  <kraai@ftfbs.org>

	* src/tools/metacity-mag.c: use g_signal_handlers_disconnect_by_func
	instead of an old deprecated function.

2009-03-11  Ori Avtalion  <ori@avtalion.name>

	* src/core/window-props.c: fix problem where the previous
        code ignored callbacks for properties whose values weren't
        looked up.  Closes #572573.

2009-03-06  Thomas Thurman  <tthurman@gnome.org>

	* configure.in: add optional dependency on gtop.
	* src/core/window-props.c: Include "(as username)"
          in the titlebar if a window is running as another user.
	* src/core/window.c: check for PID before name, since
          the rendering of the name can now depend on the PID.

        Closes #549389.

2009-02-21  Matthias Clasen  <mclasen@redhat.com>

	* src/core/bell.c: Don't force CA_PROP_CANBERRA_ENABLE to 1.
	That was a misunderstanding on my part, and makes it impossible
	to get rid of the bell.

2009-02-11  Thomas Thurman  <tthurman@gnome.org>

	Use zenity for the session management dialogue that warns about
	clueless clients, not metacity-dialog.  This is the last change